plugins {
    id 'java'
    id 'maven-publish'
    alias libs.plugins.spotless
    alias libs.plugins.gtopublishgradleplugin
}

group = 'com.gto.recipesearch'
version = '26.8.2'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'it.unimi.dsi:fastutil:8.5.16'
}

test {
    useJUnitPlatform()
}

afterEvaluate {
    tasks.withType(org.gradle.jvm.tasks.Jar).configureEach {
        destinationDirectory = file('build/libs/')
        manifest.attributes([
                'Built-By': 'nutant233',
                'FMLModType': 'GAMELIBRARY',
                'Implementation-Title': project.name,
                'Implementation-Version': version,
        ])
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = group
            artifactId = project.name
        }
    }
    repositories {
        maven {
            name = 'gtodysseyRepository'
            url = 'https://maven.gtodyssey.com/releases'
            credentials {
                username = findProperty('gtodysseyRepositoryUsername') ?: ''
                password = findProperty('gtodysseyRepositoryPassword') ?: ''
            }
        }
    }
}
gtoPublish {
    publishMaven      = true        // 默认 true
    publishGithub     = false       // 默认 false
    publishCurseforge = false       // 默认 false
    mavenRepoName     = 'gtodysseyRepository'  // 默认值
    mavenRepoUrl      = 'releases'  // 必填，可选值: 'releases' 或 'private'
    minecraftVersion  = '1.20.1'      // 必填，Minecraft 版本号
    modLoader         = 'Forge'  // 必填，模组加载器（NeoForge, Forge, Fabric 等）
    githubRepo        = 'owner/repo-name'      // GitHub 仓库（启用 GitHub 发布时必填）
    curseforgeProjectId   = '123456'    // CurseForge 项目 ID（启用 CurseForge 时必填）
    curseforgeJavaVersion = 'Java 21'   // 运行时最低 Java（GTCEu 等依赖要求 21+；开发机可用 Java 25）
}